add promise polyfill to demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <script src="locale/en/LC_MESSAGES/messages.mo.js"></script>
         <script src="locale/ja/LC_MESSAGES/messages.mo.js"></script>
+        <script src="es6-promise.min.js"></script>
         <script src="../src/js/gettext-compiled.js"></script>
     </head>
     <body>
