moved to gulp based build system

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
         <script src="locale/en/LC_MESSAGES/messages.mo.js"></script>
         <script src="locale/ja/LC_MESSAGES/messages.mo.js"></script>
         <script src="es6-promise.min.js"></script>
-        <script src="../src/js/gettext-compiled.js"></script>
+        <script src="../dist/gettext.min.js"></script>
     </head>
     <body>
         <h1>Gettext.js Demo</h1>
